src/objects/TheRequiredAccessories__c.object
<CustomObject>
    <fields>
        <fullName>ConfigurationLst__c</fullName>
        <label>配置单</label>
        <referenceTo>ConfigurationList__c</referenceTo>
        <relationshipLabel>必选配件</relationshipLabel>
        <relationshipName>Configurationlist44</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Describe__c</fullName>
        <formula>product__r.Describe__c</formula>
        <label>描述</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LogisticsOrganization__c</fullName>
        <formula>ConfigurationLst__r.LogisticsOrganization__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>物流组织</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <formula>product__r.Model__c</formula>
        <label>型号</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NewInventoryCoding__c</fullName>
        <formula>product__r.NewInventoryCoding__c</formula>
        <label>新存货编码</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberTypeIN__c</fullName>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number__c</fullName>
        <formula>product__r.Number__c</formula>
        <label>数量</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OpenQuotationUnitPrice__c</fullName>
        <formula>SystemStandardPricePer__c * (1-ConfigurationLst__r.EquipmentDiscount__c )* NumberTypeIN__c</formula>
        <label>成交单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OriginalInventoryCoding__c</fullName>
        <formula>product__r.OriginalInventoryCoding__c</formula>
        <label>原存货编码</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductNumber__c</fullName>
        <label>项目信息</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>海德堡</fullName>
                </value>
                <value>
                    <fullName>光太激光</fullName>
                </value>
                <value>
                    <fullName>光太超声</fullName>
                </value>
                <value>
                    <fullName>徕卡</fullName>
                </value>
                <value>
                    <fullName>歌德</fullName>
                </value>
                <value>
                    <fullName>罗兰</fullName>
                </value>
                <value>
                    <fullName>KOWA</fullName>
                </value>
                <value>
                    <fullName>NeoMedix</fullName>
                </value>
                <value>
                    <fullName>Frastema</fullName>
                </value>
                <value>
                    <fullName>OPTOS</fullName>
                </value>
                <value>
                    <fullName>SCHWIND</fullName>
                </value>
                <value>
                    <fullName>LENSAR</fullName>
                </value>
                <value>
                    <fullName>LUNEAU</fullName>
                </value>
                <value>
                    <fullName>HAI</fullName>
                </value>
                <value>
                    <fullName>HEINE</fullName>
                </value>
                <value>
                    <fullName>TOKA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SystemStandardPricePer__c</fullName>
        <label>系统基准价单价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SystemStandardTotalPrice__c</fullName>
        <formula>SystemStandardPricePer__c * NumberTypeIN__c</formula>
        <label>系统基准价总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalPriceOfOpen__c</fullName>
        <formula>OpenQuotationUnitPrice__c*NumberTypeIN__c</formula>
        <label>成交总价</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>产品名称</label>
        <referenceTo>Product3__c</referenceTo>
        <relationshipLabel>必选配件</relationshipLabel>
        <relationshipName>product</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>必选配件</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>全部</label>
    </listViews>
    <nameField>
        <label>必选配件名称</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>必选配件</pluralLabel>
    <recordTypes>
        <fullName>ConfigurationList</fullName>
        <active>true</active>
        <label>配置单</label>
    </recordTypes>
    <recordTypes>
        <fullName>Stock</fullName>
        <active>true</active>
        <label>库存</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>